fixed overflow problem

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,12 @@ header {
   margin: 0 10px;
 }
 
+.fullWidthApp {
+  margin: 0 !important;
+  padding: 0 10px;
+  overflow-x: hidden;
+}
+
 @media only screen and (min-width: 1400px) {
   .App {
     max-width: 1400px;
